--- a/index.html
+++ b/index.html
@@ -2,28 +2,30 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <link rel="stylesheet" href="/assets/css/style.css">
-    <title>Mind & Body</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/215e1e67e2.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <title>Mind & Body</title>
 </head>
 
 <body>
-    <header>
-<nav>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <header>
+    <nav>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Mind & Body</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand" href="/index.html">Mind & Body</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/templates/about.html">About</a>
@@ -38,29 +40,64 @@
           </div>
         </div>
       </nav>
-</nav>
-    </header>
-    <section>
-        <div class="hero-section">
-            <div class="hero-image">
-            </div>
-            <div class="cover-text">
-                <h2>MIND AND BODY
-                    YOGA STUDIO</h2>
-                <h2>In the heart of Stockholm you will experience peace of mind and body</h2>
-                <a role="button" class="btn btn-outline-light" href="/templates/classes.html">See Our Classes</button>
-            </div>
-        </div>
-    </section>
+    </nav>
+  </header>
+  <section>
+    <div class="hero-section">
+      <div class="hero-image">
+      </div>
+      <div class="cover-text">
+        <h2>MIND AND BODY
+          YOGA STUDIO</h2>
+        <h2>In the heart of Stockholm you will experience peace of mind and body</h2>
+        <a role="button" class="btn btn-outline-light" href="/templates/classes.html">See Our Classes</a>
+      </div>
+    </div>
+  </section>
+  <section class="classes-section">
+    <h1 class="home-title">Classes</h1>
+    <div class="home-classes-container">
+      <div class="home-classes beginner">
+        <img src="/assets/images/classes_images/yoga_pose_4.png" alt="archer , pose , yoga icon">
+        <h2>Beginner Yoga</h2>
+        <p>We recommend Beginner Yoga with Jane Johnson if this is is your first time taking a Yoga class. You
+          will the fundamentals of Yoga. Jane goes through the benefits of yoga aswell as the history of Yoga.
+        </p>
+        <a href="/templates/classes.html" class="classes-link card-buttons"
+          aria-label="Go to our classes and schedule page">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+      </div>
+      <div class="home-classes advanced">
+        <img src="/assets/images/classes_images/yoga_pose_2.png" alt="half , boat , pose , yoga icon">
+        <h2>Advanced Yoga</h2>
+        <p>For advanced classes we recommend this class width Susan Miranda. She will push you to your limit. In
+          this class you will evolve your pranayama (breathwork) and asana (yoga poses).</p>
+        <a href="/templates/classes.html" class="classes-link card-buttons"
+          aria-label="Go to our classes and schedule page">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+      </div>
+      <div class="home-classes group">
+        <img src="/assets/images/classes_images/yoga_pose_3.png" alt="king , dancer , pose , ii , yoga icon">
+        <h2>Group Yoga</h2>
+        <p>If you and your friends are looking to relax, exercise and have fun this class is for you. Anna
+          Alfred will teach you the fundamentals of yoga and she will teach basic yoga poses as well as
+          difficult ones.</p>
+        <a href="/templates/classes.html" class="classes-link card-buttons"
+          aria-label="Go to our classes and schedule page">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+      </div>
+    </div>
+  </section>
+  <section>
+    Reviews
+  </section>
 
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous">
-    </script>
+  <footer>
+    frirsta
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+    integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous">
+  </script>
 
 </body>
 
