Add trainer section

--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
       <div class="home-classes beginner">
         <img src="/assets/images/classes_images/yoga_pose_4.png" alt="archer , pose , yoga icon">
         <h2>Beginner Yoga</h2>
-        <p>We recommend Beginner Yoga with Jane Johnson if this is is your first time taking a Yoga class. You
-          will the fundamentals of Yoga. Jane goes through the benefits of yoga aswell as the history of Yoga.
+        <p>You will the fundamentals of Yoga. Jane goes through the benefits of yoga aswell as the history of Yoga.
         </p>
         <a href="/templates/classes.html" class="classes-link card-buttons"
           aria-label="Go to our classes and schedule page">Learn More <i class="fa-solid fa-arrow-right"></i></a>
@@ -69,7 +68,7 @@
       <div class="home-classes advanced">
         <img src="/assets/images/classes_images/yoga_pose_2.png" alt="half , boat , pose , yoga icon">
         <h2>Advanced Yoga</h2>
-        <p>For advanced classes we recommend this class width Susan Miranda. She will push you to your limit. In
+        <p>She will push you to your limit. In
           this class you will evolve your pranayama (breathwork) and asana (yoga poses).</p>
         <a href="/templates/classes.html" class="classes-link card-buttons"
           aria-label="Go to our classes and schedule page">Learn More <i class="fa-solid fa-arrow-right"></i></a>
@@ -77,16 +76,45 @@
       <div class="home-classes group">
         <img src="/assets/images/classes_images/yoga_pose_3.png" alt="king , dancer , pose , ii , yoga icon">
         <h2>Group Yoga</h2>
-        <p>If you and your friends are looking to relax, exercise and have fun this class is for you. Anna
-          Alfred will teach you the fundamentals of yoga and she will teach basic yoga poses as well as
-          difficult ones.</p>
+        <p>If you and your friends are looking to relax, exercise and have fun this class is for you.</p>
         <a href="/templates/classes.html" class="classes-link card-buttons"
           aria-label="Go to our classes and schedule page">Learn More <i class="fa-solid fa-arrow-right"></i></a>
       </div>
     </div>
   </section>
-  <section>
-    Reviews
+  <section class="trainer-section">
+    <span class="text-muted">Meet the Experts</span>
+    <h1 class="home-title trainer-title">Yoga Instructor</h1>
+    <div class="trainer-container">
+    <div class="trainer">
+      <div class="trainer-image-1 trainer-image"></div>
+      <h3>Susan Miranda<br>Manager & Anvanced instructor</h3>
+      <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
+      </p>
+      <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
+    </div>
+    <div class="trainer">
+      <div class="trainer-image-2 trainer-image"></div>
+      <h3>Jane Johnson<br>Beginner instructor</h3>
+      <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
+      </p>
+      <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
+    </div>
+    <div class="trainer">
+      <div class="trainer-image-3 trainer-image"></div>
+      <h3>Anna Alfred<br>Group Yoga instructor</h3>
+      <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
+      </p>
+      <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
+    </div>
+    <div class="trainer">
+      <div class="trainer-image-4 trainer-image"></div>
+      <h3>Maria Ericson<br>Advanced and beginner instructor</h3>
+      <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
+      </p>
+      <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
+    </div>
+  </div>
   </section>
 
   <footer>
