--- a/index.html
+++ b/index.html
@@ -86,35 +86,39 @@
     <span class="text-muted">Meet the Experts</span>
     <h1 class="home-title trainer-title">Yoga Instructor</h1>
     <div class="trainer-container">
-    <div class="trainer">
-      <div class="trainer-image-1 trainer-image"></div>
-      <h3>Susan Miranda<br>Manager & Anvanced instructor</h3>
-      <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
-      </p>
-      <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
+      <div class="trainer-group">
+        <div class="trainer">
+          <div class="trainer-image-1 trainer-image"></div>
+          <h3>Susan Miranda<br>Manager & Anvanced instructor</h3>
+          <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
+          </p>
+          <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
+        </div>
+        <div class="trainer">
+          <div class="trainer-image-2 trainer-image"></div>
+          <h3>Jane Johnson<br>Beginner instructor</h3>
+          <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
+          </p>
+          <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
+        </div>
+      </div>
+      <div class="trainer-group">
+        <div class="trainer">
+          <div class="trainer-image-3 trainer-image"></div>
+          <h3>Anna Alfred<br>Group Yoga instructor</h3>
+          <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
+          </p>
+          <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
+        </div>
+        <div class="trainer">
+          <div class="trainer-image-4 trainer-image"></div>
+          <h3>Maria Ericson<br>Advanced and beginner instructor</h3>
+          <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
+          </p>
+          <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
+        </div>
+      </div>
     </div>
-    <div class="trainer">
-      <div class="trainer-image-2 trainer-image"></div>
-      <h3>Jane Johnson<br>Beginner instructor</h3>
-      <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
-      </p>
-      <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
-    </div>
-    <div class="trainer">
-      <div class="trainer-image-3 trainer-image"></div>
-      <h3>Anna Alfred<br>Group Yoga instructor</h3>
-      <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
-      </p>
-      <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
-    </div>
-    <div class="trainer">
-      <div class="trainer-image-4 trainer-image"></div>
-      <h3>Maria Ericson<br>Advanced and beginner instructor</h3>
-      <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
-      </p>
-      <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
-    </div>
-  </div>
   </section>
 
   <footer>
