--- a/index.html
+++ b/index.html
@@ -58,24 +58,30 @@
     <h1 class="home-title">Classes</h1>
     <div class="home-classes-container">
       <div class="home-classes beginner">
+        <div class="yoga-icon-title">
         <img src="/assets/images/classes_images/yoga_pose_4.png" alt="archer , pose , yoga icon">
         <h2>Beginner Yoga</h2>
+      </div>
         <p>You will the fundamentals of Yoga. Jane goes through the benefits of yoga aswell as the history of Yoga.
         </p>
         <a href="/templates/classes.html" class="classes-link card-buttons"
           aria-label="Go to our classes and schedule page">Learn More <i class="fa-solid fa-arrow-right"></i></a>
       </div>
       <div class="home-classes advanced">
+        <div class="yoga-icon-title">
         <img src="/assets/images/classes_images/yoga_pose_2.png" alt="half , boat , pose , yoga icon">
         <h2>Advanced Yoga</h2>
+        </div>
         <p>She will push you to your limit. In
           this class you will evolve your pranayama (breathwork) and asana (yoga poses).</p>
         <a href="/templates/classes.html" class="classes-link card-buttons"
           aria-label="Go to our classes and schedule page">Learn More <i class="fa-solid fa-arrow-right"></i></a>
       </div>
       <div class="home-classes group">
+        <div class="yoga-icon-title">
         <img src="/assets/images/classes_images/yoga_pose_3.png" alt="king , dancer , pose , ii , yoga icon">
         <h2>Group Yoga</h2>
+        </div>
         <p>If you and your friends are looking to relax, exercise and have fun this class is for you.</p>
         <a href="/templates/classes.html" class="classes-link card-buttons"
           aria-label="Go to our classes and schedule page">Learn More <i class="fa-solid fa-arrow-right"></i></a>
@@ -88,15 +94,18 @@
     <div class="trainer-container">
       <div class="trainer-group">
         <div class="trainer">
+          <div class="trainer-image-title">
           <div class="trainer-image-1 trainer-image"></div>
-          <h3>Susan Miranda<br>Manager & Anvanced instructor</h3>
+          <h3 class="trainer-name">Susan Miranda<br>Manager & Anvanced instructor</h3>
+          </div>
           <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
           </p>
           <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
         </div>
         <div class="trainer">
+          <div class="trainer-image-title">
           <div class="trainer-image-2 trainer-image"></div>
-          <h3>Jane Johnson<br>Beginner instructor</h3>
+          <h3 class="trainer-name">Jane Johnson<br>Beginner instructor</h3></div>
           <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
           </p>
           <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
@@ -104,15 +113,17 @@
       </div>
       <div class="trainer-group">
         <div class="trainer">
+          <div class="trainer-image-title">
           <div class="trainer-image-3 trainer-image"></div>
-          <h3>Anna Alfred<br>Group Yoga instructor</h3>
+          <h3 class="trainer-name">Anna Alfred<br>Group Yoga instructor</h3></div>
           <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
           </p>
           <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
         </div>
         <div class="trainer">
+          <div class="trainer-image-title">
           <div class="trainer-image-4 trainer-image"></div>
-          <h3>Maria Ericson<br>Advanced and beginner instructor</h3>
+          <h3 class="trainer-name">Maria Ericson<br>Advanced and beginner instructor</h3></div>
           <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
           </p>
           <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
@@ -120,7 +131,20 @@
       </div>
     </div>
   </section>
-
+  <section class="about-section">
+    about
+  </section>
+<section class="newsletter-section">
+<div class="background-image"></div>
+<div class="newsletter-text">
+<h2>Subscribe to our Newsletter</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas.</p>
+<form action="#">
+  <input class="newsletter-input" type="email" name="newsletter" id="newsletter" placeholder="Enter your email">
+<button class="subscribe-button" type="submit">Subscribe</button>
+</form>
+</div>
+</section>
   <footer>
     frirsta
   </footer>
