Add responsive css to newsletter-section

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     about
   </section>
 <section class="newsletter-section">
-<div class="background-image"></div>
+<div class="background-image">
 <div class="newsletter-text">
 <h2>Subscribe to our Newsletter</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas.</p>
@@ -143,6 +143,7 @@
   <input class="newsletter-input" type="email" name="newsletter" id="newsletter" placeholder="Enter your email">
 <button class="subscribe-button" type="submit">Subscribe</button>
 </form>
+</div>
 </div>
 </section>
   <footer>
