--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="home-classes-container">
       <div class="home-classes beginner">
         <div class="yoga-icon-title">
-        <img src="/assets/images/classes_images/yoga_pose_4.png" alt="archer , pose , yoga icon">
+        <img class="yoga-image" src="/assets/images/classes_images/yoga_pose_4.png" alt="archer , pose , yoga icon">
         <h2>Beginner Yoga</h2>
       </div>
         <p>You will the fundamentals of Yoga. Jane goes through the benefits of yoga aswell as the history of Yoga.
@@ -69,7 +69,7 @@
       </div>
       <div class="home-classes advanced">
         <div class="yoga-icon-title">
-        <img src="/assets/images/classes_images/yoga_pose_2.png" alt="half , boat , pose , yoga icon">
+        <img class="yoga-image" src="/assets/images/classes_images/yoga_pose_2.png" alt="half , boat , pose , yoga icon">
         <h2>Advanced Yoga</h2>
         </div>
         <p>She will push you to your limit. In
@@ -79,7 +79,7 @@
       </div>
       <div class="home-classes group">
         <div class="yoga-icon-title">
-        <img src="/assets/images/classes_images/yoga_pose_3.png" alt="king , dancer , pose , ii , yoga icon">
+        <img class="yoga-image" src="/assets/images/classes_images/yoga_pose_3.png" alt="king , dancer , pose , ii , yoga icon">
         <h2>Group Yoga</h2>
         </div>
         <p>If you and your friends are looking to relax, exercise and have fun this class is for you.</p>
