--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://kit.fontawesome.com/215e1e67e2.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <title>Mind & Body</title>
 </head>
 
@@ -17,7 +17,7 @@
     <nav>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/index.html">Mind & Body</a>
+          <a class="navbar-brand" href="index.html">Mind & Body</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,16 +25,16 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/templates/about.html">About</a>
+                <a class="nav-link" href="templates/about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/templates/classes.html">Classes</a>
+                <a class="nav-link" href="templates/classes.html">Classes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/templates/contact.html">Contact</a>
+                <a class="nav-link" href="templates/contact.html">Contact</a>
               </li>
             </ul>
           </div>
@@ -50,7 +50,7 @@
         <h2>MIND AND BODY
           YOGA STUDIO</h2>
         <h2>In the heart of Stockholm you will experience peace of mind and body</h2>
-        <a role="button" class="btn btn-outline-light" href="/templates/classes.html">See Our Classes</a>
+        <a role="button" class="btn btn-outline-light" href="templates/classes.html">See Our Classes</a>
       </div>
     </div>
   </section>
@@ -59,31 +59,31 @@
     <div class="home-classes-container">
       <div class="home-classes beginner">
         <div class="yoga-icon-title">
-        <img class="yoga-image" src="/assets/images/classes_images/yoga_pose_4.png" alt="archer , pose , yoga icon">
+        <img class="yoga-image" src="assets/images/classes_images/yoga_pose_4.png" alt="archer , pose , yoga icon">
         <h2>Beginner Yoga</h2>
       </div>
         <p>You will the fundamentals of Yoga. Jane goes through the benefits of yoga aswell as the history of Yoga.
         </p>
-        <a href="/templates/classes.html" class="classes-link card-buttons"
+        <a href="templates/classes.html" class="classes-link card-buttons"
           aria-label="Go to our classes and schedule page">Learn More <i class="fa-solid fa-arrow-right"></i></a>
       </div>
       <div class="home-classes advanced">
         <div class="yoga-icon-title">
-        <img class="yoga-image" src="/assets/images/classes_images/yoga_pose_2.png" alt="half , boat , pose , yoga icon">
+        <img class="yoga-image" src="assets/images/classes_images/yoga_pose_2.png" alt="half , boat , pose , yoga icon">
         <h2>Advanced Yoga</h2>
         </div>
         <p>She will push you to your limit. In
           this class you will evolve your pranayama (breathwork) and asana (yoga poses).</p>
-        <a href="/templates/classes.html" class="classes-link card-buttons"
+        <a href="templates/classes.html" class="classes-link card-buttons"
           aria-label="Go to our classes and schedule page">Learn More <i class="fa-solid fa-arrow-right"></i></a>
       </div>
       <div class="home-classes group">
         <div class="yoga-icon-title">
-        <img class="yoga-image" src="/assets/images/classes_images/yoga_pose_3.png" alt="king , dancer , pose , ii , yoga icon">
+        <img class="yoga-image" src="assets/images/classes_images/yoga_pose_3.png" alt="king , dancer , pose , ii , yoga icon">
         <h2>Group Yoga</h2>
         </div>
         <p>If you and your friends are looking to relax, exercise and have fun this class is for you.</p>
-        <a href="/templates/classes.html" class="classes-link card-buttons"
+        <a href="templates/classes.html" class="classes-link card-buttons"
           aria-label="Go to our classes and schedule page">Learn More <i class="fa-solid fa-arrow-right"></i></a>
       </div>
     </div>
